--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,5 +8,5 @@ services:
     ports:
       - "5432:5432"
     volumes:
-      - ./docker/setup.sql:/docker-entrypoint-initdb.d/setup.sql
+      - ./setup.sql:/docker-entrypoint-initdb.d/setup.sql
       
