feat: feat: audio recording and question creation

--- a/.env.exemple
+++ b/.env.exemple
@@ -4,3 +4,5 @@ PORT=3333
 # DATABASE
 DATABASE_URL="postgresql://docker:docker@localhost:5432/agents"
 
+#Gemini 
+GEMINI_API_KEY="AIzaSyDmf85x6GzEBs8X4uokVAWzNvvDOW32Rtg"
